    - update debian/firefox.install.pp
  * Fix launcher script to work with FF-on-XR builds
    - rename debian/firefox.sh.in => debian/firefox.sh.pp
    - update debian/firefox.sh.pp
  * Port bz460917_att350845_reload_new_plugins to Firefox 4 so that
    we can start the plugin installer without throwing an exception
    - update debian/patches/bz460917_att350845_reload_new_plugins.patch

  [ Alexander Sack <asac@linaro.org> ]
  * add support for mozilla breakpad symbols and in turn enable
    crashreporter   
    - add debian/patches/ftbfs_crashreporter.patch   
    - update debian/patches/series
    - update debian/control
    - update debian/rules

 -- Chris Coulson <chris.coulson@canonical.com>  Mon, 08 Nov 2010 23:53:07 +0000

firefox-3.6 (3.6~a2~hg20090810r31291+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  [ H. Montoliu <hmontoliu@ubuntu.com> ]
  * fix LP: #361052 - firefox apport hook fails to retrieve pluginreg.dat file
  * update debian/apport/firefox-3.6.py - removed unused code and minor refactoring.

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Mass update from 3.1 to 3.6:
    * Renamed and updated
      - debian/abrowser-3.1.desktop => debian/abrowser-3.6.desktop
      - debian/apport/firefox-3.1.py => debian/apport/firefox-3.6.py
      - debian/firefox-3.1-final.desktop => debian/firefox-3.6-final.desktop
      - debian/firefox-3.1-gnome-support.postinst.in => debian/firefox-3.6-gnome-support.postinst.in
      - debian/firefox-3.1-minefield.desktop => debian/firefox-3.6-minefield.desktop
      - debian/firefox-3.1-restart-required.update-notifier => debian/firefox-3.6-restart-required.update-notifier
      - debian/firefox-3.1-shiretoko.desktop => debian/firefox-3.6-shiretoko.desktop
      - debian/firefox-3.1.install => debian/firefox-3.6.install
      - debian/firefox-3.1.links => debian/firefox-3.6.links
      - debian/firefox-3.1.menu => debian/firefox-3.6.menu
      - debian/mozclient/firefox-3.1.conf => debian/mozclient/firefox-3.6.conf