@@ -1,10 +1,0 @@
-Name: @BRAND_NAME@ restart required
-Name-fr: Relancement de @BRAND_NAME@ requis
-Priority: High
-Terminal: False
-DontShowAfterReboot: True
-DisplayIf: pgrep -x @APPNAME@ -U $(id -u) > /dev/null
-Description: @BRAND_NAME@ has been upgraded (or reinstalled) and must be restarted.
- Please quit and restart your web browser now.
-Description-fr: @BRAND_NAME@ a été mis à jour (ou réinstallé) et doit être relancé.
- Veuillez quitter et redémarrer for navigateur.
