@@ -2,7 +2,6 @@
 
 set -e
 
-UPDATENOTIFIERDIR=/var/lib/update-notifier/user.d
 LIBDIR=/@LIBDIR@
 APPNAME=@APPNAME@
 
@@ -75,17 +74,8 @@ fi
 
 echo "Please restart all running instances of $APPNAME, or you will experience problems."
 
-if [ -d $UPDATENOTIFIERDIR ] ; then
-  # pgrep matches application names from /proc/<pid>/status which is
-  # truncated according to sys/procfs.h definition. Problem is it's
-  # platform dependent. Either 15 or 16 chars.
-  if [ `/usr/bin/pgrep -x -c firefox` -ne 0 ] ||
-     [ `/usr/bin/pgrep -x -c $APPNAME` -ne 0 ] ;  then
-    cp -f $LIBDIR/$APPNAME-restart-required.update-notifier \
-        $UPDATENOTIFIERDIR/$APPNAME-restart-required
-  else
-    rm -f $UPDATENOTIFIERDIR/$APPNAME-restart-required
-  fi
+if [ -d /var/run ] ; then
+    touch /var/run/$APPNAME-restart-required
 fi
 
 if [ -x /usr/bin/update-menus ] ; then
