@@ -582,6 +582,14 @@ firefox-4.0 (4.0~b8~hg20101107r57082+nobinonly-0ubuntu1) UNRELEASED; urgency=low
   * Port bz460917_att350845_reload_new_plugins to Firefox 4 so that
     we can start the plugin installer without throwing an exception
     - update debian/patches/bz460917_att350845_reload_new_plugins.patch
+  * Don't use update-notifier for the restart required notification - it
+    is redundant having 2 separate mechanisms, and the update-notifier
+    notification was never translated properly anyway. This means we rely
+    on the in-browser notification from ubufox
+    - remove debian/firefox-restart-required.update-notifier.in
+    - update debian/firefox.install.in
+    - update debian/firefox.postinst.in
+    - update debian/rules
 
   [ Alexander Sack <asac@linaro.org> ]
   * add support for mozilla breakpad symbols and in turn enable
@@ -591,7 +599,7 @@ firefox-4.0 (4.0~b8~hg20101107r57082+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     - update debian/control
     - update debian/rules
 
- -- Chris Coulson <chris.coulson@canonical.com>  Mon, 08 Nov 2010 23:53:07 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Tue, 09 Nov 2010 11:42:38 +0000
 
 firefox-3.6 (3.6~a2~hg20090810r31291+nobinonly-0ubuntu1) UNRELEASED; urgency=low
 
